--- a/stopwatch.css
+++ b/stopwatch.css
@@ -30,7 +30,7 @@ body{
 }
 
 #heading{
-    font-size: 84px;
+    font-size: min(84px, 9vw);
     margin: 10px;
     text-align: center;
     color: #a1a1a1;
@@ -45,8 +45,8 @@ body{
     color: #e8e8e8;
     padding: 10px;
     margin: 5px;
-    font-size: 120px;
-    width: 160px;
+    font-size: min(120px,10vw);
+    width: min(160px,13vw);
     text-align: center;
     border-radius: 15px;
 }
@@ -58,10 +58,10 @@ body{
 button{
     border: none;
     background-color: #4870ff;
-    width: 200px;
+    width: min(20vw, 200px);
     color: white;
     padding: 10px 20px;
-    font-size: larger;
+    font-size: min(4vw, larger);
     border-radius: 5px;
     margin: 20px 5px;
 }
@@ -125,31 +125,27 @@ h4 {
 }
 
 @media (min-width: 320px) and (max-width: 479px) {
-    #heading{
-        font-size: 48px;
-    }
-    #hour, #minute, #second, #millisecond{
-        width: 80px;
-        font-size: 64px;
+    #container{
+        margin: 10px;
     }
     button{
-        width: 100px;
-        font-size: medium;
+        margin: 10px 5px;
+        padding: 7px 10px;
     }
     #marked{
-        width: 300px;
+        width: 75vw;
     }
     #marked.show{
         height: 120px;
     }
     #marked div{
-        font-size: 10px;
+        font-size: 8px;
     }
     .counter{
-        width: 20px;
+        width: 8px;
     }
     .time{
-        width: 90px;
+        width: 80px;
     }
 }
 
@@ -201,7 +197,7 @@ h4 {
         height: 120px;
     }
     #marked div{
-        font-size: 20px;
+        font-size: 15px;
     }
     .counter{
         width: 40px;
